@@ -7175,12 +7175,9 @@ int pc_autosave(int tid,unsigned int tick,int id,int data)
 		save_flag = 1; //Noone was saved, so save first found char.
 	map_foreachpc(pc_autosave_sub);
 
-	if (autosave_interval < 0)
-		return 0; //Fixed interval for saving. [Skotlex]
-
 	interval = autosave_interval/(clif_countusers()+1);
-	if(interval <= 0)
-		interval = 1;
+	if(interval < minsave_interval)
+		interval = minsave_interval;
 	add_timer(gettick()+interval,pc_autosave,0,0);
 
 	return 0;
@@ -7594,10 +7591,7 @@ int do_init_pc(void) {
 	natural_heal_prev_tick = gettick();
 	add_timer_interval(natural_heal_prev_tick + NATURAL_HEAL_INTERVAL, pc_natural_heal, 0, 0, NATURAL_HEAL_INTERVAL);
 
-	if (autosave_interval > 0) //Normal saving.
-		add_timer(gettick() + autosave_interval, pc_autosave, 0, 0);
-	else //Constant save interval.
-		add_timer_interval(gettick() -autosave_interval, pc_autosave, 0, 0, -autosave_interval);
+	add_timer(gettick() + autosave_interval, pc_autosave, 0, 0);
 
 	if (battle_config.day_duration > 0 && battle_config.night_duration > 0) {
 		int day_duration = battle_config.day_duration;
